Fix layout issues

--- a/src/ui/styles/components/navigation.scss
+++ b/src/ui/styles/components/navigation.scss
@@ -1,6 +1,8 @@
 .navigation {
+  z-index: 1000;
+  padding: 25px;
+
   display: flex;
-  margin-bottom: 25px;
 
   &-filler {
     flex-grow: 1;
