--- a/src/ui/styles/main.scss
+++ b/src/ui/styles/main.scss
@@ -27,13 +27,9 @@ body {
   font-family: "Merriweather Sans";
 
   height: 100vh;
-
   margin: 0;
-  padding: 25px;
 }
 
 #app {
   height: 100%;
-  display: flex;
-  flex-direction: column;
 }
